UPD - Begin crud

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -22,7 +22,7 @@ security:
             form_login:
                 login_path: security_login
                 check_path: security_login
-
+                default_target_path: dashboard_index
            
 
             logout:
@@ -38,5 +38,5 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
+      # - {  path: ^/dashboard, roles:  }
         # - { path: ^/profile, roles: ROLE_USER }
