--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -19,11 +19,9 @@ security:
             lazy: true
             provider: app_user_provider
 
-            form_login:
-                login_path: security_login
+            json_login:
                 check_path: security_login
-                default_target_path: dashboard_index
-           
+
 
             logout:
                 path: security_logout
